13 April 2021: George
	- Fix documentation comment for files previously residing in checkconf/.

13 April 2021: Wouter
	- Fix that nxdomain synthesis does not happen above the stub or
	  forward definition.

12 April 2021: George
	- Fix (increase) verbosity level for iterator error log in
	  processQueryTargets().

12 April 2021: Wouter
	- Fix permission denied sendto log, squelch the log messages
	  unless high verbosity is set.

9 April 2021: Wouter
	- rebuild configure to set EXTRALINK to libunbound.la for #460.

7 April 2021: Wouter
	- Fix for #411: Depth protect for crash on deleted element timeout.

1 April 2021: Wouter
	- Merge #460 from orbea: build: Link with the libtool archive.
	- Fix to stop IPv6 PMTU discovery.

31 March 2021: George
	- Clean makedist.sh.

31 March 2021: Wouter
	- Fix stack-protector change to not override other CFLAGS options.

30 March 2021: George
	- Disable the use of stack-protector for cross compiled 32-bit windows
	  builds; relates to #444.

25 March 2021: Wouter
	- Fix #429: Also fix end of transfer for http download of auth zones.

24 March 2021: Wouter
	- Fix deprecation test to work for iOS TVOS and WatchOS, it uses
	  CFLAGS and CPPFLAGS and also checks if the item is unavailable.
	- Travis, fix script to fail when tasks fail.
	- Travis, fix warning in ubsan compile.
	- Fix configure Targetconfiditionals.h header check, to use compile.
	- Fix that cachedb does not produce empty object files when disabled.

23 March 2021: Wouter
	- Travis enable all tests again. Clang analyzer only a couple times,
	  when there is a difference. homebrew updates disabled, so it does
	  not hang. removed trailing slashes from configure paths. Moved iOS
	  tests to allow-failure.
	- travis, analyzer disabled on test without debug, that does not
	  run anway.  Turn off failing tests except one.  Update iOS test
	  to xcode image 12.2.

22 March 2021: George
	- Fix unused-function warning when compiling with --enable-dnscrypt.