@@ -196,8 +196,6 @@ int
 fptr_whitelist_pending_udp(comm_point_callback_type *fptr)
 {
 	if(fptr == &serviced_udp_callback) return 1;
-	else if(fptr == &worker_handle_reply) return 1;
-	else if(fptr == &libworker_handle_reply) return 1;
 	return 0;
 }
 
@@ -205,8 +203,6 @@ int
 fptr_whitelist_pending_tcp(comm_point_callback_type *fptr)
 {
 	if(fptr == &serviced_tcp_callback) return 1;
-	else if(fptr == &worker_handle_reply) return 1;
-	else if(fptr == &libworker_handle_reply) return 1;
 	return 0;
 }
 
